# kop-audio

./: .gitignore  Cargo.toml  build.rs  default.nix  notes.md  readme.md  shell.nix
src/: audio.rs  channel_util.rs  client.rs  coordinator.rs  main.rs  server.rs  tui.rs
src/implementations/: pulseaudio.rs
src/unused/: raylib.rs
